reg-now container and sponsor overlapping issue elimated, cropped about us img

--- a/style.css
+++ b/style.css
@@ -574,6 +574,8 @@ header{
 }
 @media(max-width : 900px){
     .reg-container{
+        position: relative;
+        top: 20px;
         width: 100%;
         height: 50vh;
         display: grid;
@@ -688,7 +690,7 @@ header{
 @media  screen and (max-width: 1100px){
     .sponsors{
         position: relative;
-        top: 30px;
+        top: 20px;
         height: 100%;
     }
     .sponsor-row-1{
